<resources>
    <string name="app_name">Smart prescription</string>
    <string name="Welcome">Welcome</string>
    <string name="sign_in_as_doctor">Sign in as doctor</string>
    <string name="sign_in_as_patient">Sign in as patient</string>
    <string name="an_app_to_manage_your_medical_prescription_easily">An app to manage \nyour medical prescription\neasily</string>
    <string name="doc_name">Name</string>
    <string name="highest_qualification_doc">Highest qualification</string>
    <string name="register">Register</string>
    <string name="patient_first_name">First name</string>
    <string name="patient_last_name">Last name</string>
    <string name="have_an_account_login_here">Have an account.? Login here</string>
    <string name="patient_phone_number">Phone number</string>
    <string name="patient_create_password">Create password</string>
    <string name="patient_confirm_password">Confirm password</string>
    <string name="Patient_gender">Gender</string>
    <string name="as_a_patient">As a patient</string>
    <string name="prescribe_a_patient">Prescribe a patient</string>
    <string name="log_out">Log out</string>
    <string name="doctor">Doctor</string>
    <string name="sign_in">Sign in</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
    <string name="title_activity_prescribe_apatient">prescribe_a_patient</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="patient_details">Patient Details</string>
    <string name="validate">Validate</string>
    <string name="others">Others</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="patient_ndetails">Patient \nDetails</string>
    <string name="medications_nand_dosage">Medications \nand dosage</string>
    <string name="add_medicines">Add medicines</string>
    <string name="otp">OTP</string>
    <string name="add_medicine_dosage_and_duration">Add medicine, dosage and duration</string>
    <string name="unique_id">Unique ID</string>
    <string name="prescription">Prescription</string>
    <string name="submit">Submit</string>
    <string name="medicine_name">Medicine name</string>
    <string name="duration">Duration</string>
    <string name="dosage">Dosage</string>
    <string name="load_prescription">load prescription</string>
    <string name="forgot_password"><u>Forgot password.?</u></string>
    <string name="not_registered_register_here"><u>Not registered.? Register here</u></string>
</resources>