<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Light_mode"
    android:orientation="vertical"
    tools:context=".MainActivity"

    >


    <TextView
        android:id="@+id/idWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/Welcome"
        android:textAlignment="textStart"
        android:textColor="@color/design_default_color_secondary_variant"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idGist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:text="@string/an_app_to_manage_your_medical_prescription_easily"
        android:textAlignment="viewStart"
        android:textColor="@color/dark_color"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/idWelcome" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <Button
        android:id="@+id/idSign_in_as_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:backgroundTint="@color/design_default_color_secondary_variant"
        android:paddingHorizontal="18sp"
        android:paddingVertical="12sp"
        android:text="@string/sign_in_as_doctor"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/idSign_in_as_patient"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/idGist"
        app:layout_constraintVertical_bias="0.792" />

    <Button
        android:id="@+id/idSign_in_as_patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/design_default_color_secondary_variant"
        android:paddingHorizontal="18sp"
        android:paddingVertical="12sp"
        android:text="@string/sign_in_as_patient"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

</androidx.constraintlayout.widget.ConstraintLayout>