<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Light_mode"
    tools:context=".prescribe_a_patient">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/prescription"
        android:textColor="@color/design_default_color_secondary_variant"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <EditText
        android:id="@+id/patient_number_toCheck"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="112dp"
        android:autofillHints=""
        android:backgroundTint="@color/dark_color"
        android:ems="10"
        android:hint="@string/patient_phone_number"
        android:inputType="phone"
        android:textColor="@color/dark_color"
        android:textColorHint="@color/dark_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/id_validate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/design_default_color_secondary_variant"
        android:paddingHorizontal="18sp"
        android:paddingVertical="12sp"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/patient_id_toCheck"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/dark_color"
        android:ems="10"
        android:hint="@string/unique_id"
        android:inputType="textPersonName"
        android:textColor="@color/dark_color"
        android:textColorHint="@color/dark_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/patient_number_toCheck" />


    <EditText
        android:id="@+id/id_prescription_input"
        android:layout_width="260dp"
        android:layout_height="200dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/textfield_bg"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/prescription"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:textColor="@color/dark_color"
        android:textColorHint="@color/dark_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/patient_id_toCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>


